syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Blank{}

message GetById {
  string id = 1;
}

message Author {
  string id = 1;
  string name = 2;
  string description = 3;
}

message AuthorList {
  repeated Author authors = 1;
}

message CreateAuthorRequest {
  string name = 1;
  string description = 2;
}

service AuthorService {
  rpc CreateAuthor(CreateAuthorRequest) returns (Author);
  rpc CreateAuthorStream(stream CreateAuthorRequest) returns (AuthorList);
  rpc CreateAuthorStreamBidirectional(stream CreateAuthorRequest) returns (stream Author);
  rpc GetAuthors(Blank) returns (AuthorList);
  rpc GetAuthor(GetById) returns (Author);
}
