syntax = "proto3";
package pb;
option go_package = "internal/pb";

message BlankBook{}

message GetByIdBook {
  string id = 1;
}

message Book {
  string id = 1;
  string name = 2;
  string isbn = 3;
  string author_id = 4;
}

message BookList {
  repeated Book books = 1;
}

message CreateBookRequest {
  string name = 1;
  string isbn = 2;
  string author_id = 3;
}

service BookService {
  rpc CreateBook(CreateBookRequest) returns (Book);
  rpc CreateBookStream(stream CreateBookRequest) returns (BookList);
  rpc CreateBookStreamBidirectional(stream CreateBookRequest) returns (stream Book);
  rpc GetBooks(BlankBook) returns (BookList);
  rpc GetBook(GetByIdBook) returns (Book);
}
